--- a/web-template/index.html
+++ b/web-template/index.html
@@ -6,10 +6,11 @@
 -->
 <html>
 	<head>
-		<title>Ethereal by HTML5 UP</title>
+		<title>Dylan Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/edit.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -21,28 +22,28 @@
 					<div id="wrapper">
 
 						<!-- Panel (Banner) -->
-							<section class="panel banner right">
+							<section class="panel banner right" id="box-1-container">
 								<div class="content color0 span-3-75">
 									<h1 class="major">Hello, my name<br />
-									is Ethereal</h1>
-									<p>This is <strong>Ethereal</strong>, a free site template by AJ for <a href="https://html5up.net">HTML5 UP</a>. It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you dig it :)</p>
+									is <span>Dylan Mac Yves</span></h1>
+									<p>Dedicated self-taught programmer specializing in <strong>Data Science</strong> and <strong>Machine Learning</strong></p>
 									<ul class="actions">
-										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
+										<li><a href="#first" class="button circle icon solid fa-angle-right">Next</a></li>
 									</ul>
 								</div>
-								<div class="image filtered span-1-75" data-position="25% 25%">
-									<img src="images/pic01.jpg" alt="" />
+								<div class="image span-1-75" data-position="25% 25%">
+									<img src="assets/images/unsplash-1.jpg" alt="" />
 								</div>
 							</section>
 
 						<!-- Panel (Spotlight) -->
-							<section class="panel spotlight medium right" id="first">
+							<section class="panel spotlight medium right box-2-container" id="first" >
 								<div class="content span-7">
-									<h2 class="major">Sed etiam aenean</h2>
-									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+									<h2 class="major">About Me</h2>
+									<p>I'm a 18 years old self-taught programmer, year 2021 secondary school graduate. I've been programming for over a year and it was all started because of curiosity. Currently learning about <strong>Data Science and ML</strong> also looking forward for a scholarship for a degree in Computer Science</p>
 								</div>
-								<div class="image filtered tinted" data-position="top left">
-									<img src="images/pic02.jpg" alt="" />
+								<div class="image" data-position="top right">
+									<img src="assets/images/unsplash-2.jpg" alt=""/>
 								</div>
 							</section>
 
